--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
 <script type="text/javascript">
     (function(d, m){
         var kommunicateSettings = 
-            {"appId":"<YOUR-KOMMUNICATE-APP-ID>","popupWidget":true,"automaticChatOpenOnNavigation":true};
+            {"appId":"2ba05dbc0c20e3485f4dce85cdf09d8c3","popupWidget":true,"automaticChatOpenOnNavigation":true};
         var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
         s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
         var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
@@ -109,6 +109,7 @@
     })(document, window.kommunicate || {});
 /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 </script>
+
 
 </body>
 </html>
